# aakmer

./: .cruft.json  .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.cfg
docs/: api_docs.md
src/aakmer/: FastaSequence.py  cli.py  counter.py  utils.py
tests/: test_FastaSequence.py  test_cli.py  test_counter.py  test_utils.py
tests/test_data/sequences/: multiple_aa.fasta  raw-multiple-aa.fasta  single_nucl.fa
